--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
+
 }
 
 dependencies {
@@ -33,6 +38,15 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation files('libs/commons-codec-1.11.jar')
+    implementation files('libs/commons-logging-1.2.jar')
+    implementation files('libs/fluent-hc-4.5.13.jar')
+    implementation files('libs/httpclient-4.5.13.jar')
+    implementation files('libs/httpclient-cache-4.5.13.jar')
+    implementation files('libs/httpcore-4.4.13.jar')
+    implementation files('libs/httpmime-4.5.13.jar')
+    implementation files('libs/jna-4.5.2.jar')
+    implementation files('libs/jna-platform-4.5.2.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
